@@ -1,10 +1,9 @@
-@comment $NetBSD: PLIST,v 1.2 2003/01/25 04:10:42 fredb Exp $
+@comment $NetBSD: PLIST,v 1.3 2005/01/18 00:08:17 hubertf Exp $
 bin/musixflx
 bin/musixtex
 man/man1/musixflx.1
-share/texmf/doc/musixtex/backgrnd.sty
+share/texmf/doc/musixtex/musixflx.1
 share/texmf/doc/musixtex/glossary.eps
-share/texmf/doc/musixtex/multicol.sty
 share/texmf/doc/musixtex/musixdoc.aux
 share/texmf/doc/musixtex/musixdoc.bat
 share/texmf/doc/musixtex/musixdoc.cb
@@ -17,9 +16,6 @@ share/texmf/doc/musixtex/musixdoc.log
 share/texmf/doc/musixtex/musixdoc.mx1
 share/texmf/doc/musixtex/musixdoc.mx2
 share/texmf/doc/musixtex/musixdoc.ps
-share/texmf/doc/musixtex/musixdoc.slg
-share/texmf/doc/musixtex/musixdoc.sty
-share/texmf/doc/musixtex/musixdoc.tex
 share/texmf/doc/musixtex/musixdoc.toc
 share/texmf/fonts/source/musixtex/musexgen.mf
 share/texmf/fonts/source/musixtex/musix11.mf
@@ -180,6 +176,10 @@ share/texmf/fonts/tfm/musixtex/xslup20.tfm
 share/texmf/fonts/tfm/musixtex/xslz20.tfm
 share/texmf/fonts/tfm/musixtex/xslz20d.tfm
 share/texmf/fonts/tfm/musixtex/xtie20.tfm
+share/texmf/tex/latex/musixtex/backgrnd.sty
+share/texmf/tex/latex/musixtex/multicol.sty
+share/texmf/tex/latex/musixtex/musixdoc.sty
+share/texmf/tex/latex/musixtex/musixdoc.tex
 share/texmf/tex/latex/musixtex/musixadd.tex
 share/texmf/tex/latex/musixtex/musixbar.tex
 share/texmf/tex/latex/musixtex/musixbbm.tex
@@ -213,11 +213,11 @@ share/texmf/tex/latex/musixtex/musixste.tex
 share/texmf/tex/latex/musixtex/musixstf.tex
 share/texmf/tex/latex/musixtex/musixstr.tex
 share/texmf/tex/latex/musixtex/musixsty.tex
+share/texmf/tex/latex/musixtex/musixtex.sty
+share/texmf/tex/latex/musixtex/musixtex.tex
 share/texmf/tex/latex/musixtex/musixtex.fmt
 share/texmf/tex/latex/musixtex/musixtex.ins
 share/texmf/tex/latex/musixtex/musixtex.log
-share/texmf/tex/latex/musixtex/musixtex.sty
-share/texmf/tex/latex/musixtex/musixtex.tex
 share/texmf/tex/latex/musixtex/musixtri.tex
 share/texmf/web2c/musixtex.fmt
 @exec %D/bin/texconfig rehash
